fix visibillity bg

--- a/src/scss/layout/hero.scss
+++ b/src/scss/layout/hero.scss
@@ -2,7 +2,6 @@
     padding: 96px 0 58px;
     min-height: 50vh;
     height: 100%;
-    background-image: url(/assets/image/bg-hero.jpg);
     color: $color-white;
 
     &::before {
